assets/styles/main.less
/* Copyright (c) 2024 Grass Development Team. Designed by Leo Jia (https://yzcf.top) */

@import url(./util.less);

::selection {
    background-color: var(--runtime-selection);
    color: var(--runtime-background);
}

::-webkit-scrollbar {
    width: 3px;
    height: 3px;

    &-thumb {
        border-radius: 3px;
        background: #a0a0a0;

        &:hover {
            background: #8c8c8c;
        }
    }
}

* {
    padding: 0;
    margin: 0;
}

:root {
    -webkit-tap-highlight-color: transparent;

    --theme-radius: 10px;

    .runtimeLight({});
}

html,
body,
#app {
    width: 100%;
    height: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: sans-serif;
}

body {
    transition: background-color 0.3s ease-in-out;
    background-color: var(--runtime-background);
    color: var(--runtime-color);

    .dark(.runtimeDark({}));
}

#app {
    overflow-y: auto;

    > header {
        box-sizing: border-box;
        position: absolute;
        width: 100%;
        height: 60px;
        padding: 10px 15px;
        margin: 0 3px 0 0;
        background-color: var(--runtime-header);
        backdrop-filter: blur(40px);
        overflow: hidden;
        user-select: none;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 10px;
        z-index: 100;
        transition: background-color 0.3s ease-in-out;

        > div {
            box-sizing: border-box;
            width: 100%;
            height: 40px;
            max-width: 1200px;
            display: flex;
            justify-content: space-between;
            flex-shrink: 0;
            flex-grow: 0;

            > div {
                display: flex;
                align-items: center;
                gap: 10px;

                img {
                    width: auto;
                    height: 80%;
                    border-radius: var(--theme-radius);
                }

                h1 {
                    font-size: 22px;
                }
            }
        }
    }

    > main {
        box-sizing: border-box;
        width: calc(100% - 30px);
        max-width: 1200px;
        margin: 70px 15px 20px;
        display: flex;
        flex-direction: row;
        gap: 20px;

        > div {
            display: flex;
            flex-direction: column;
            gap: 20px;

            &.gui-main {
                flex-grow: 1;
                width: calc(65% - 10px);
            }

            &.gui-sidebar {
                width: calc(35% - 10px);
                max-width: 350px;
            }
        }

        .mobile({
            flex-direction: column;

            > div {
                width: 100% !important;
            }
        });

        article,
        section {
            width: 100%;
            height: auto;
            display: flex;
            flex-direction: column;
            align-items: start;
            gap: 10px;
        }
    }

    > footer {
        width: calc(100% - 30px);
        max-width: 1200px;
        margin: 0 15px 60px;
        display: flex;
        flex-direction: column;
    }

    a {
        color: var(--runtime-link);
        transition: color 0.3s ease-in-out;

        &:hover {
            .runtimeLight({
                --runtime-link: var(--theme-color-extreme-dark);
            });
            .dark(.runtimeDark({
                --runtime-link: var(--theme-color-extreme-light);
            }));
        }

        .runtimeLight({
            --runtime-link: var(--theme-color-extreme-dark-hover);
        });
        .dark(.runtimeDark({
            --runtime-link: var(--theme-color-extreme-light-hover);
        }));
    }
}

